--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
+# Created by .ignore support plugin (hsz.mobi)
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen### Yeoman template
+www/node_modules/
+www/bower_components/
+*.log
+
+build/
+dist/
+
 platforms/
 plugins/
+
