--- a/www/bower.json
+++ b/www/bower.json
@@ -7,7 +7,11 @@
     "page": "visionmedia/page.js#~1.6.4",
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
-    "polymer": "Polymer/polymer#^1.2.0"
+    "polymer": "Polymer/polymer#^1.2.0",
+    "google-map": "GoogleWebComponents/google-map#^1.1.10",
+    "paper-button": "PolymerElements/paper-button#^1.0.11",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.4",
+    "paper-toast": "PolymerElements/paper-toast#^1.2.2"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
