--- a/www/bower.json
+++ b/www/bower.json
@@ -11,7 +11,10 @@
     "google-map": "GoogleWebComponents/google-map#^1.1.10",
     "paper-button": "PolymerElements/paper-button#^1.0.11",
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.4",
-    "paper-toast": "PolymerElements/paper-toast#^1.2.2"
+    "paper-toast": "PolymerElements/paper-toast#^1.2.2",
+    "paper-spinner": "PolymerElements/paper-spinner#^1.1.1",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.9",
+    "paper-fab": "PolymerElements/paper-fab#^1.2.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
