--- a/www/bower.json
+++ b/www/bower.json
@@ -14,7 +14,9 @@
     "paper-toast": "PolymerElements/paper-toast#^1.2.2",
     "paper-spinner": "PolymerElements/paper-spinner#^1.1.1",
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.9",
-    "paper-fab": "PolymerElements/paper-fab#^1.2.0"
+    "paper-fab": "PolymerElements/paper-fab#^1.2.0",
+    "paper-dialog-behavior": "PolymerElements/paper-dialog-behavior#^1.2.6",
+    "paper-checkbox": "PolymerElements/paper-checkbox/paper-checkbox#^1.1.3"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
