--- a/www/bower.json
+++ b/www/bower.json
@@ -16,7 +16,10 @@
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.9",
     "paper-fab": "PolymerElements/paper-fab#^1.2.0",
     "paper-dialog-behavior": "PolymerElements/paper-dialog-behavior#^1.2.6",
-    "paper-checkbox": "PolymerElements/paper-checkbox/paper-checkbox#^1.1.3"
+    "paper-checkbox": "PolymerElements/paper-checkbox/paper-checkbox#^1.1.3",
+    "paper-tabs": "PolymerElements/paper-tabs#^1.5.0",
+    "iron-pages": "PolymerElements/iron-pages#^1.0.7",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
