--- a/www/bower.json
+++ b/www/bower.json
@@ -19,7 +19,10 @@
     "paper-checkbox": "PolymerElements/paper-checkbox/paper-checkbox#^1.1.3",
     "paper-tabs": "PolymerElements/paper-tabs#^1.5.0",
     "iron-pages": "PolymerElements/iron-pages#^1.0.7",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1"
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
+    "paper-card": "PolymerElements/paper-card#^1.1.1",
+    "iron-icon": "PolymerElements/iron-icon#^1.0.8",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.1.5"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
