--- a/www/bower.json
+++ b/www/bower.json
@@ -22,7 +22,8 @@
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
     "paper-card": "PolymerElements/paper-card#^1.1.1",
     "iron-icon": "PolymerElements/iron-icon#^1.0.8",
-    "paper-header-panel": "PolymerElements/paper-header-panel#^1.1.5"
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.1.5",
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
