--- a/www/bower.json
+++ b/www/bower.json
@@ -23,7 +23,8 @@
     "paper-card": "PolymerElements/paper-card#^1.1.1",
     "iron-icon": "PolymerElements/iron-icon#^1.0.8",
     "paper-header-panel": "PolymerElements/paper-header-panel#^1.1.5",
-    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15"
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15",
+    "iron-ajax": "PolymerElements/iron-ajax#^1.2.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
